@@ -249,6 +249,7 @@ enum
       WXMENU_MSG_SPAM_UNMARK,
       WXMENU_MSG_SPAM_CHECK,
    WXMENU_MSG_SPAM_SUBMENU_END,
+   WXMENU_MSG_REMOVE_ATTACHMENTS,
    WXMENU_MSG_SEP6,
 
    WXMENU_MSG_SAVEADDRESSES,
